# icfp-tutorial-generics

./: icfp-tutorial-generics.cabal
src/: CUFP1.hs
